statistic release table textcontent color fix

--- a/blog/templates/blog/statistic.html
+++ b/blog/templates/blog/statistic.html
@@ -378,7 +378,7 @@
                             else {
                                 b_color = "#f1f1f1"
                             }
-                            if (document.getElementById("t_"+i+"_"+j).textContent == "0") {
+                            if (document.getElementById("t_"+i+"_"+j).textContent == 0) {
                                 t_color = "#aeaeae"
                             }
                             else {
